# smart-route-optimizer

./: database.py  db_helper.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: 1STUDENTS.py  2BUSES.py  3ATTENDANCE.py  4ROUTES.py  5PICKUP POINTS.py  6MAP VIEW.py  7ANALYTICS.py  8REPORTS.py
