[project]
name = "bus-route-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.5.0",
    "mysql-connector-python>=9.7.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
]
